--- a/css/styles.css
+++ b/css/styles.css
@@ -188,14 +188,13 @@ margin-bottom: 48px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding-bottom: 4px;
+  margin-bottom: 8px;
 }
 .features-item-description {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  padding-top: 4px;
 }
 /* Our Team */
 .our-team-section {
@@ -247,6 +246,7 @@ margin-bottom: 8px
 
 .our-portfolio-container {
 padding: 32px 16px;
+border: 1px solid #e7e9fc;
 }
 .our-portfolio-title {
   font-size: 36px;
@@ -261,11 +261,11 @@ padding: 32px 16px;
     display: flex;
     flex-wrap: wrap;
     row-gap: 48px;
+    column-gap: 24px;
 
 }
 .our-portfolio-item {
     width: calc((1128px - 2 * 24px) / 3);
-    border-bottom: 1px solid #e7e9fc;
 }
 .our-portfolio-name {
   font-weight: 500;
@@ -282,11 +282,9 @@ padding: 32px 16px;
   color: #434455;
 }
 /* Footer */
-.footer-container {
-  padding: 100px 0;
-}
 .footer-section {
 background: #2e2f42;
+padding: 100px 0;
 }
 .logo-footer {
 font-weight: 700;
