--- a/css/styles.css
+++ b/css/styles.css
@@ -247,6 +247,7 @@ margin-bottom: 8px
 .our-portfolio-container {
 padding: 32px 16px;
 border: 1px solid #e7e9fc;
+border-top: none;
 }
 .our-portfolio-title {
   font-size: 36px;
