--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,6 @@ gap: 40px;
   color: #ffffff;
   text-align: center;
   letter-spacing: 0.02em;
-padding-top: 188px;
 margin-left: auto;
 margin-right: auto;
 max-width: 496px;
@@ -142,7 +141,6 @@ margin-bottom: 48px;
     border-radius: 4px;
     border: none;
     padding: 16px 32px;
-    margin-bottom: 188px;
     margin-left: 480px;
     margin-right: auto;
     min-width: 169px;
@@ -176,7 +174,6 @@ margin-bottom: 48px;
 .features-list {
     display: flex;
         align-items: center;
-        justify-content: space-between;
         gap: 24px;
 }
 .features-item {
@@ -306,4 +303,5 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #f4f4fd;
+max-width: 264px;
 }
