--- a/css/styles.css
+++ b/css/styles.css
@@ -28,20 +28,20 @@ button {
   cursor: pointer;
 }
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 .container {
-    max-width: 1158px;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-left: auto;
-    margin-right: auto;
+  max-width: 1158px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .section-padding {
-    padding-top: 120px;
-    padding-bottom: 120px;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 /* Header */
 .logo {
@@ -53,26 +53,25 @@ img {
   text-transform: uppercase;
   color: #4d5ae5;
   margin-right: 76px;
-
 }
 .logo-part {
   color: #2e2f42;
 }
 .page-header {
-    border-bottom: 1px solid #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;
 }
 .page-header-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .page-navigation {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 .navigation-list {
-display: flex;
-gap: 40px;
+  display: flex;
+  gap: 40px;
 }
 .navigation-link {
   font-weight: 500;
@@ -83,18 +82,33 @@ gap: 40px;
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navigation-link:hover,
 .navigation-link:focus,
 .navigation-link:active {
   color: #404bbf;
 }
+.current {
+  position: relative;
+  color: #404bbf;
+}
+.current::after {
+  content: "";
+  border-radius: 2px;
+  background: #404bbf;
+  height: 4px;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+}
 .adress-section {
   font-style: normal;
 }
 .adress-list {
-    display: flex;
-    gap: 40px;
+  display: flex;
+  gap: 40px;
 }
 .adress-link {
   font-size: 16px;
@@ -102,6 +116,7 @@ gap: 40px;
   color: #434455;
   letter-spacing: 0.02em;
   font-style: inherit;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .adress-link:hover,
 .adress-link:focus {
@@ -109,7 +124,15 @@ gap: 40px;
 }
 /* Hero */
 .hero-section {
-  background: #2e2f42;
+  background-color: #2e2f42;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(/images/hero-image.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+
   max-width: 1440px;
   margin-right: auto;
   margin-left: auto;
@@ -122,36 +145,34 @@ gap: 40px;
   color: #ffffff;
   text-align: center;
   letter-spacing: 0.02em;
-margin-left: auto;
-margin-right: auto;
-max-width: 496px;
-margin-bottom: 48px;
-
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 496px;
+  margin-bottom: 48px;
 }
 .hero-button {
-    cursor: pointer;
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    color: #ffffff;
-    background: #4d5ae5;
-    letter-spacing: 0.04em;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border: none;
-    padding: 16px 32px;
-    margin-left: 480px;
-    margin-right: auto;
-    min-width: 169px;
-    font-family: inherit;
-    display: block;
-
-
+  cursor: pointer;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #ffffff;
+  background-color: #4d5ae5;
+  letter-spacing: 0.04em;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+  padding: 16px 32px;
+  margin-left: 480px;
+  margin-right: auto;
+  min-width: 169px;
+  font-family: inherit;
+  display: block;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-button:hover,
 .hero-button:focus {
-  background: #404bbf;
+  background-color: #404bbf;
 }
 /* Features */
 
@@ -167,17 +188,29 @@ margin-bottom: 48px;
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.features-icon-wrapper {
+  display: flex;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  background-color: #f4f4fd;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
+  gap: 24px;
+}
 .features-title {
   margin-bottom: 8px;
 }
 
 .features-list {
-    display: flex;
-        align-items: center;
-        gap: 24px;
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
 .features-item {
-    width: calc((1128px - 3 * 24px) / 4);
+  width: calc((1128px - 3 * 24px) / 4);
 }
 .features-item-title {
   font-weight: 500;
@@ -204,19 +237,18 @@ margin-bottom: 48px;
   color: #2e2f42;
   text-align: center;
   text-transform: capitalize;
-  margin-bottom: 72px
+  margin-bottom: 72px;
 }
 .our-team-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 24px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
 }
 .our-team-item {
   background: #fff;
-width: calc((1128px - 3 * 24px) / 4);
-}
-.our-team-item:first-child {
-border-radius: 0px 0px 4px 4px;
+box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  width: calc((1128px - 3 * 24px) / 4);
+  border-radius: 0px 0px 4px 4px;
 }
 .our-team-name {
   font-weight: 500;
@@ -224,27 +256,46 @@ border-radius: 0px 0px 4px 4px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-margin-bottom: 8px
+  margin-bottom: 8px;
 }
 .our-team-job {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  margin-bottom: 8px;
 }
 .our-team-desc-card {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    text-align: center;
-
+  padding-top: 32px;
+  padding-bottom: 32px;
+  text-align: center;
 }
-
+.social-link-list {
+  display: flex;
+  gap: 24px;
+  margin-left: 16px;
+  margin-right: 16px;
+}
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #f4f4fd;
+}
+.social-link:hover {
+  background-color: #404bbf;
+}
 /* Our Portfolio */
 
 .our-portfolio-container {
-padding: 32px 16px;
-border: 1px solid #e7e9fc;
-border-top: none;
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 .our-portfolio-title {
   font-size: 36px;
@@ -256,15 +307,43 @@ border-top: none;
   margin-bottom: 72px;
 }
 .our-portfolio-list {
-    display: flex;
-    flex-wrap: wrap;
-    row-gap: 48px;
-    column-gap: 24px;
-
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 48px;
+  column-gap: 24px;
 }
 .our-portfolio-item {
-    width: calc((1128px - 2 * 24px) / 3);
+  width: calc((1128px - 2 * 24px) / 3);
+  position: relative;
+  overflow: hidden;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.our-portfolio-item:hover {
+box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16),
+    0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+
+.our-portfolio-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 360px;
+  height: 300px;
+  background-color: #4d5ae5;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px 68px;
+  transform: translateY(150%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.our-portfolio-item:hover .our-portfolio-overlay {
+  transform: translateY(0);
+}
+
 .our-portfolio-name {
   font-weight: 500;
   font-size: 20px;
@@ -281,27 +360,62 @@ border-top: none;
 }
 /* Footer */
 .footer-section {
-background: #2e2f42;
-padding: 100px 0;
+  background: #2e2f42;
+  padding: 100px 0;
+}
+.footer-container {
+  display: flex;
+}
+.footer-desc-section {
+  margin-right: 120px;
 }
 .logo-footer {
-font-weight: 700;
-font-size: 18px;
-line-height: 1.17;
-letter-spacing: 0.03em;
-color: #4d5ae5;
-font-family: "Raleway", sans-serif;
-text-transform: uppercase;
-display: inline-block;
-margin-bottom: 16px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  color: #4d5ae5;
+  font-family: "Raleway", sans-serif;
+  text-transform: uppercase;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .logo-footer-part {
-color: #f4f4fd;
+  color: #f4f4fd;
 }
 .footer-desc {
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #f4f4fd;
-max-width: 264px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  max-width: 264px;
+}
+
+.footer-social-media-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  margin-bottom: 16px;
+}
+.social-media-list {
+  display: flex;
+  gap: 16px;
+}
+
+.social-media-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #f4f4fd;
+}
+
+.social-media-link:hover {
+  background-color: #31d0aa;
 }
