--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(./images/hero-image.jpg);
+    url(../images/hero-image.jpg);
   background-size: cover;
   background-repeat: no-repeat;
 
