--- a/css/styles.css
+++ b/css/styles.css
@@ -125,10 +125,8 @@ img {
 /* Hero */
 .hero-section {
   background-color: #2e2f42;
-  background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)),
     url(../images/hero-image.jpg);
   background-size: cover;
   background-repeat: no-repeat;
