--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,9 @@ img {
 }
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .page-header-container {
   display: flex;
@@ -130,7 +133,7 @@ img {
     url(../images/hero-image.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-
+background-position: center;
   max-width: 1440px;
   margin-right: auto;
   margin-left: auto;
@@ -273,6 +276,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
   gap: 24px;
   margin-left: 16px;
   margin-right: 16px;
+  justify-content: center;
 }
 .social-link {
   display: flex;
@@ -285,7 +289,8 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: #f4f4fd;
 }
-.social-link:hover {
+.social-link:hover,
+.social-link:focus {
   background-color: #404bbf;
 }
 /* Our Portfolio */
@@ -312,7 +317,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.1
 }
 .our-portfolio-item {
   width: calc((1128px - 2 * 24px) / 3);
-  position: relative;
+ 
   overflow: hidden;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -321,7 +326,10 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16),
     0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
-
+.our-portfolio-image {
+  position: relative;
+  overflow: hidden;
+}
 .our-portfolio-overlay {
   position: absolute;
   top: 0;
@@ -363,6 +371,7 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
 }
 .footer-container {
   display: flex;
+  align-items: baseline;
 }
 .footer-desc-section {
   margin-right: 120px;
@@ -414,6 +423,8 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
   fill: #f4f4fd;
 }
 
-.social-media-link:hover {
+.social-media-link:hover,
+.social-media-link:focus
+{
   background-color: #31d0aa;
 }
