--- a/css/styles.css
+++ b/css/styles.css
@@ -342,8 +342,8 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  padding: 40px 32px 68px;
-  transform: translateY(150%);
+  padding: 40px 32px;
+  transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .our-portfolio-item:hover .our-portfolio-overlay {
