--- a/css/styles.css
+++ b/css/styles.css
@@ -428,3 +428,273 @@ box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
 {
   background-color: #31d0aa;
 }
+.subscribe {
+ margin-left: 80px;
+}
+
+.footer-input {
+border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: transparent;
+  margin-right: 24px;
+}
+.footer-input::placeholder{
+  font-size: 12px;
+  line-height: 24px; 
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+
+}
+.btn-subscribe {
+  border-radius: 4px;
+    padding: 8px 24px;
+    width: 165px;
+    height: 40px;
+    background: #4d5ae5;
+    fill: #fff;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 24px; 
+      line-height: 1.5;
+      letter-spacing: 0.04em;
+      text-align: center;
+      color: #fff;
+      display: flex;
+      text-align: center;
+        cursor: pointer;
+        padding-top: 8px;
+position: relative;
+        padding-bottom: 8px;
+        border: none;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+ .btn-subscribe:hover,
+ .btn-subscribe:focus {
+   background-color: #404bbf;
+ }
+ 
+.footer-subscribe-wrapper {
+  display: flex;
+ gap: 24px;
+  }
+  
+.btn-subscribe-icon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 24px;
+}
+
+
+
+/* Modal */
+
+.modal-overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  opacity: 0;
+visibility: hidden;
+transition: opacity 250 ms cubic-bezier(0.4, 0, 0.2, 1),visibility 250 ms cubic-bezier(0.4, 0, 0.2, 1) ;
+
+}
+.modal-overlay.is-open {
+opacity: 1;
+visibility: visible;
+}
+.modal {
+box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background: #fcfcfc;
+  border-radius: 4px;
+  max-width: 408px;
+  max-height: 584px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 24px;
+}
+.modal-overlay.is-open {
+  opacity: 1;
+  pointer-events: auto;
+}
+.modal-close-btn {
+  border-radius: 50%;
+  
+      padding: 0;
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      background-color: #e7e9fc;;
+      line-height: 0;
+      position: absolute;
+      top:24px;
+      right: 24px;
+      padding: 8px;
+      fill: #2e2f42;
+      transition: background-color 250 ms cubic-bezier(0.4, 0, 0.2, 1), fill 250 ms cubic-bezier(0.4, 0, 0.2, 1) ;
+
+}
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+background-color: #404bbf;
+fill: #fff;
+
+}
+.modal-close-btn-icon {
+  height: 8px;
+  width: 8px;
+  
+}
+.modal-desc {
+    font-weight: 500;
+    font-size: 16px;
+  line-height: 24px; 
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 16px;
+    margin-top: 48px;
+}
+.modal-form {
+  display: flex;
+  flex-direction: column;
+
+}
+.modal-form-label {
+    font-size: 12px;
+    line-height: 14px; 
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    display: block;
+    padding-bottom: 4px;
+}
+.modal-form-input {
+border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 100%;
+  height: 40px;
+  margin-bottom: 8px;
+  transition: border 250 ms cubic-bezier(0.4, 0, 0.2, 1), fill 250 ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-left: 38px;
+}
+.modal-form-input:focus{
+  border: 1px solid #4d5ae5; 
+  outline: transparent;
+}
+.modal-form-input:focus + .modal-form-icon{
+fill: #4d5ae5;
+}
+
+.modal-form-icon {
+fill: #2e2f42;
+position: absolute;
+top: 50%;
+  transform: translateY(-50%);
+  left: 16px;
+
+}
+.modal-form-input-wrapper {
+  position: relative;
+  
+}
+.modal-form-message {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    width: 100%;
+    height: 120px;
+    background-color: transparent;
+    resize: none;
+    padding: 8px 16px;
+    transition: border 250 ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-bottom: 16px;
+
+}
+.modal-form-message:focus {
+  border: 1px solid #4d5ae5;
+    outline: transparent;}
+    
+.modal-form-message::placeholder {
+ 
+    font-size: 12px;
+     line-height: 14px; 
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+}
+.modal-form-checkbox-label {
+    font-size: 12px; line-height: 14px; 
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+.modal-form-link {
+  // line-height: 16px; 
+    line-height: 1.33333;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+}
+.modal-form-checkbox-wrapper {
+  margin-bottom: 24px;
+}
+.modal-form-own-checkbox {
+  border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    height: 16px;
+    width: 16px;
+    display: block;
+    cursor: pointer;
+    display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      fill: transparent;
+      transition: fill 250 ms cubic-bezier(0.4, 0, 0.2, 1), border 250 ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250 ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-checkbox:checked + .modal-form-checkbox-label .modal-form-own-checkbox{
+background-color: #404bbf;
+  border: 1px solid #404bbf;
+  fill:  #f4f4fd; ;
+
+}
+.modal-form-checkbox:focus +.modal-form-checkbox-label .modal-form-own-checkbox{
+  outline:1px solid #404bbf ;
+}
+.modal-form-submit-btn{
+  border-radius: 4px;
+    padding: 16px 32px;
+    width: 169px;
+    height: 56px;
+    display: block;
+      cursor: pointer;
+      margin-left: auto;
+      margin-right: auto;
+      box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+      font-weight: 500;
+        font-size: 16px;
+        line-height: 24px; 
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        text-align: center;
+        color: #fff;
+        background: #4d5ae5;
+        border: none;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.modal-form-submit-btn:hover,
+.modal-form-submit-btn:focus {
+  background-color: #404bbf;
+}
