--- a/css/styles.css
+++ b/css/styles.css
@@ -440,6 +440,11 @@ border: 1px solid #fff;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: transparent;
   margin-right: 24px;
+  font-size: 12px;
+  line-height: 24px; 
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
 }
 .footer-input::placeholder{
   font-size: 12px;
@@ -497,7 +502,7 @@ position: relative;
 /* Modal */
 
 .modal-overlay {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(46, 47, 66, 0.4);
   position: fixed;
   top: 0;
   left: 0;
@@ -506,7 +511,7 @@ position: relative;
   z-index: 999;
   opacity: 0;
 visibility: hidden;
-transition: opacity 250 ms cubic-bezier(0.4, 0, 0.2, 1),visibility 250 ms cubic-bezier(0.4, 0, 0.2, 1) ;
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .modal-overlay.is-open {
@@ -517,13 +522,14 @@ visibility: visible;
 box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
   border-radius: 4px;
-  max-width: 408px;
+  width: 408px;
   max-height: 584px;
+  padding: 72px 24px 24px 24px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 24px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-overlay.is-open {
   opacity: 1;
@@ -531,7 +537,8 @@ box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 
 }
 .modal-close-btn {
   border-radius: 50%;
-  
+  width: 24px;
+  height: 24px;
       padding: 0;
       border: 1px solid rgba(0, 0, 0, 0.1);
       background-color: #e7e9fc;;
@@ -539,22 +546,26 @@ box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 
       position: absolute;
       top:24px;
       right: 24px;
-      padding: 8px;
       fill: #2e2f42;
-      transition: background-color 250 ms cubic-bezier(0.4, 0, 0.2, 1), fill 250 ms cubic-bezier(0.4, 0, 0.2, 1) ;
-
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-btn:hover,
 .modal-close-btn:focus {
 background-color: #404bbf;
 fill: #fff;
+border: none;
 
 }
 .modal-close-btn-icon {
   height: 8px;
   width: 8px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
+
 .modal-desc {
     font-weight: 500;
     font-size: 16px;
@@ -564,30 +575,33 @@ fill: #fff;
     text-align: center;
     color: #2e2f42;
     margin-bottom: 16px;
-    margin-top: 48px;
 }
 .modal-form {
   display: flex;
   flex-direction: column;
 
 }
+.modal-form-wrapper {
+  margin-bottom: 8px;
+}
 .modal-form-label {
     font-size: 12px;
     line-height: 14px; 
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
     display: block;
-    padding-bottom: 4px;
+    margin-bottom: 4px;
 }
 .modal-form-input {
 border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   width: 100%;
   height: 40px;
-  margin-bottom: 8px;
-  transition: border 250 ms cubic-bezier(0.4, 0, 0.2, 1), fill 250 ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-left: 38px;
+  background-color: transparent;
+  outline: transparent;
 }
 .modal-form-input:focus{
   border: 1px solid #4d5ae5; 
@@ -603,6 +617,7 @@ position: absolute;
 top: 50%;
   transform: translateY(-50%);
   left: 16px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .modal-form-input-wrapper {
@@ -617,31 +632,36 @@ top: 50%;
     background-color: transparent;
     resize: none;
     padding: 8px 16px;
-    transition: border 250 ms cubic-bezier(0.4, 0, 0.2, 1);
-    margin-bottom: 16px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    outline: transparent;
+      font-size: 12px;
+    line-height: 14px; 
+      line-height: 1.17;
+      letter-spacing: 0.04em;
+      color: rgba(46, 47, 66, 0.4);
 
 }
 .modal-form-message:focus {
-  border: 1px solid #4d5ae5;
-    outline: transparent;}
+  border-color: #4d5ae5;}
     
 .modal-form-message::placeholder {
  
     font-size: 12px;
      line-height: 14px; 
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: rgba(46, 47, 66, 0.4);
 }
 .modal-form-checkbox-label {
-    font-size: 12px; line-height: 14px; 
-    line-height: 1.16667;
+    font-size: 12px;
+    line-height: 14px; 
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
 }
 .modal-form-link {
   // line-height: 16px; 
-    line-height: 1.33333;
+    line-height: 1.33;
     text-decoration: underline;
     text-decoration-skip-ink: none;
     color: #4d5ae5;
@@ -660,21 +680,22 @@ top: 50%;
       justify-content: center;
       align-items: center;
       fill: transparent;
-      transition: fill 250 ms cubic-bezier(0.4, 0, 0.2, 1), border 250 ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250 ms cubic-bezier(0.4, 0, 0.2, 1);
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-checkbox:checked + .modal-form-checkbox-label .modal-form-own-checkbox{
 background-color: #404bbf;
-  border: 1px solid #404bbf;
+  border: none;
   fill:  #f4f4fd; ;
 
 }
 .modal-form-checkbox:focus +.modal-form-checkbox-label .modal-form-own-checkbox{
   outline:1px solid #404bbf ;
 }
-.modal-form-submit-btn{
+.modal-form-submit-btn {
+  font-family: "Roboto", sans-serif;
   border-radius: 4px;
     padding: 16px 32px;
-    width: 169px;
+    min-width: 169px;
     height: 56px;
     display: block;
       cursor: pointer;
@@ -683,15 +704,13 @@ background-color: #404bbf;
       box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
       font-weight: 500;
         font-size: 16px;
-        line-height: 24px; 
         line-height: 1.5;
         letter-spacing: 0.04em;
         text-align: center;
         color: #fff;
         background: #4d5ae5;
         border: none;
-      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);}
 
 
 .modal-form-submit-btn:hover,
