--- a/css/styles.css
+++ b/css/styles.css
@@ -460,7 +460,7 @@ border: 1px solid #fff;
 .btn-subscribe {
   border-radius: 4px;
     padding: 8px 24px;
-    width: 165px;
+    min-width: 165px;
     height: 40px;
     background: #4d5ae5;
     fill: #fff;
@@ -469,14 +469,13 @@ border: 1px solid #fff;
       line-height: 24px; 
       line-height: 1.5;
       letter-spacing: 0.04em;
-      text-align: center;
       color: #fff;
       display: flex;
+      justify-content: center;
+      align-items: center;
       text-align: center;
         cursor: pointer;
-        padding-top: 8px;
 position: relative;
-        padding-bottom: 8px;
         border: none;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -523,7 +522,7 @@ box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 
   background: #fcfcfc;
   border-radius: 4px;
   width: 408px;
-  max-height: 584px;
+  min-height: 584px;
   padding: 72px 24px 24px 24px;
   position: absolute;
   top: 50%;
@@ -565,7 +564,9 @@ border: none;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
-
+.modal-form-wrapper {
+  margin-bottom: 16px;
+}
 .modal-desc {
     font-weight: 500;
     font-size: 16px;
