--- a/css/styles.css
+++ b/css/styles.css
@@ -476,7 +476,6 @@ border: 1px solid #fff;
       align-items: center;
       text-align: center;
         cursor: pointer;
-position: relative;
         border: none;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -491,10 +490,8 @@ position: relative;
   }
   
 .btn-subscribe-icon {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: 24px;
+ 
+  margin-left: 16px;
 }
 
 
@@ -523,6 +520,7 @@ box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 
   background: #fcfcfc;
   border-radius: 4px;
   width: 408px;
+
   min-height: 584px;
   padding: 72px 24px 24px 24px;
   position: absolute;
@@ -717,4 +715,7 @@ background-color: #404bbf;
 .modal-form-submit-btn:hover,
 .modal-form-submit-btn:focus {
   background-color: #404bbf;
+}
+.modal-form-message-wrapper{
+  margin-bottom: 16px;
 }
