--- a/css/styles.css
+++ b/css/styles.css
@@ -241,7 +241,7 @@ url('../images/hero-image/hero-image-mob.jpg');
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
-width: 100%;
+max-width: 320px;
 margin-right: auto;
 margin-left: auto;
 padding: 72px 0;
@@ -301,6 +301,7 @@ max-width: 496px;
 }
 
 .hero-section {
+    max-width: 768px;
 padding: 112px 0;
 background-image: linear-gradient(rgba(46, 47, 66, 0.7),
             rgba(46, 47, 66, 0.7)),
@@ -317,6 +318,7 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7),
 }}
 @media screen and (min-width: 1158px) {
 .hero-section {
+max-width: 1158px;
 padding: 188px 0;
 background-image: linear-gradient(rgba(46, 47, 66, 0.7),
 rgba(46, 47, 66, 0.7)),
