--- a/css/styles.css
+++ b/css/styles.css
@@ -318,7 +318,7 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7),
 }}
 @media screen and (min-width: 1158px) {
 .hero-section {
-max-width: 1158px;
+max-width: 1440px;
 padding: 188px 0;
 background-image: linear-gradient(rgba(46, 47, 66, 0.7),
 rgba(46, 47, 66, 0.7)),
@@ -345,6 +345,7 @@ display: none;
 
 .features-title {
 margin-bottom: 8px;
+
 }
 
 .features-list {
@@ -363,6 +364,7 @@ line-height: 1.11;
 letter-spacing: 0.02em;
 color: #2e2f42;
 margin-bottom: 8px;
+text-align: center;
 }
 
 .features-item-description {
@@ -382,6 +384,9 @@ font-weight: 500;
 }
 .features-item {
 max-width: calc((100% - 24px) / 2);
+}
+.features-item-title {
+    text-align: start;
 }
 }
 
@@ -817,8 +822,27 @@ opacity: 1;
     position: relative;
 
 }
+.modal-close-btn {
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: #e7e9fc;
+    line-height: 0;
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    fill: #2e2f42;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .mobile-menu-close-btn {
-    border-radius: 100%;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
     padding: 0;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: #ffffff;
